vpc/vpc.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Creates 1 VPC, 2 public subnets, 2 private subnets, 1 network ACL, 2 NAT gateways, 1 Internet Gateway, 4 route tables (2 public (1 is created by default), 2 private), 2 elastic IPs (one for each NAT gateway), and 1 default VPC security group. Each private subnet gets its own NAT gateway, which costs about 5 cents each per hour. The public subnet is attached to an internet gateway.",
    "Mappings": {
        "VPCRanges": {
            "10.0.0.0": {
                "PrivateSubnetAZ1": "10.0.2.0/24",
                "PrivateSubnetAZ2": "10.0.3.0/24",
                "PublicSubnetAZ1": "10.0.0.0/24",
                "PublicSubnetAZ2": "10.0.1.0/24"
            },
            "10.40.0.0": {
                "PrivateSubnetAZ1": "10.40.2.0/24",
                "PrivateSubnetAZ2": "10.40.3.0/24",
                "PublicSubnetAZ1": "10.40.0.0/24",
                "PublicSubnetAZ2": "10.40.1.0/24"
            },
            "10.80.0.0": {
                "PrivateSubnetAZ1": "10.80.2.0/24",
                "PrivateSubnetAZ2": "10.80.3.0/24",
                "PublicSubnetAZ1": "10.80.0.0/24",
                "PublicSubnetAZ2": "10.80.1.0/24"
            }
        }
    },
    "Outputs": {
        "DefaultSG": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-DefaultSG"
                        ]
                    ]
                }
            },
            "Value": {
                "Fn::GetAtt": [
                    "VPCBase",
                    "DefaultSecurityGroup"
                ]
            }
        },
        "ElasticIP1": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-ElasticIP1"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "EIPNATAZ1"
            }
        },
        "ElasticIP2": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-ElasticIP2"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "EIPNATAZ2"
            }
        },
        "SubnetPrivateAZ1": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-SubnetPrivateAZ1"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "PrivateNetAZ1"
            }
        },
        "SubnetPrivateAZ2": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-SubnetPrivateAZ2"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "PrivateNetAZ2"
            }
        },
        "SubnetPublicAZ1": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-SubnetPublicAZ1"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "PublicNetAZ1"
            }
        },
        "SubnetPublicAZ2": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-SubnetPublicAZ2"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "PublicNetAZ2"
            }
        },
        "VPCID": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-VPCID"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "VPCBase"
            }
        }
    },
    "Parameters": {
        "CIDRRange": {
            "AllowedValues": [
                "10.0.0.0",
                "10.40.0.0",
                "10.80.0.0"
            ],
            "Default": "10.40.0.0",
            "Description": "VPCCIDR Range (will be a /16 block)",
            "Type": "String"
        }
    },
    "Resources": {
        "EIPNATAZ1": {
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        },
        "EIPNATAZ2": {
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        },
        "IGWBase": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-IGW"
                                ]
                            ]
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::InternetGateway"
        },
        "IGWBaseAttachment": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "IGWBase"
                },
                "VpcId": {
                    "Ref": "VPCBase"
                }
            },
            "Type": "AWS::EC2::VPCGatewayAttachment"
        },
        "NATAZ1": {
            "DependsOn": "IGWBaseAttachment",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "EIPNATAZ1",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "PublicNetAZ1"
                }
            },
            "Type": "AWS::EC2::NatGateway"
        },
        "NATAZ1Route": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATAZ1"
                },
                "RouteTableId": {
                    "Ref": "RouteTablePrivateAZ1"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "NATAZ2": {
            "DependsOn": "IGWBaseAttachment",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "EIPNATAZ2",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "PublicNetAZ2"
                }
            },
            "Type": "AWS::EC2::NatGateway"
        },
        "NATAZ2Route": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATAZ2"
                },
                "RouteTableId": {
                    "Ref": "RouteTablePrivateAZ2"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "PrivateNetAZ1": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "VPCRanges",
                        {
                            "Ref": "CIDRRange"
                        },
                        "PrivateSubnetAZ1"
                    ]
                },
                "MapPublicIpOnLaunch": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-PrivateAZ1"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "private"
                    }
                ],
                "VpcId": {
                    "Ref": "VPCBase"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "PrivateNetAZ2": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "VPCRanges",
                        {
                            "Ref": "CIDRRange"
                        },
                        "PrivateSubnetAZ2"
                    ]
                },
                "MapPublicIpOnLaunch": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-PrivateAZ2"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "private"
                    }
                ],
                "VpcId": {
                    "Ref": "VPCBase"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "PublicNetAZ1": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "VPCRanges",
                        {
                            "Ref": "CIDRRange"
                        },
                        "PublicSubnetAZ1"
                    ]
                },
                "MapPublicIpOnLaunch": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-PublicAZ1"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "VPCBase"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "PublicNetAZ2": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "VPCRanges",
                        {
                            "Ref": "CIDRRange"
                        },
                        "PublicSubnetAZ2"
                    ]
                },
                "MapPublicIpOnLaunch": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-PublicAZ2"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "VPCBase"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "RouteAssociationPrivateAZ1Default": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTablePrivateAZ1"
                },
                "SubnetId": {
                    "Ref": "PrivateNetAZ1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "RouteAssociationPrivateAZ2Default": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTablePrivateAZ2"
                },
                "SubnetId": {
                    "Ref": "PrivateNetAZ2"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "RouteAssociationPublicAZ1Default": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTablePublic"
                },
                "SubnetId": {
                    "Ref": "PublicNetAZ1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "RouteAssociationPublicAZ2Default": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTablePublic"
                },
                "SubnetId": {
                    "Ref": "PublicNetAZ2"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "RoutePublicDefault": {
            "DependsOn": [
                "IGWBaseAttachment"
            ],
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "IGWBase"
                },
                "RouteTableId": {
                    "Ref": "RouteTablePublic"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "RouteTablePrivateAZ1": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-PrivateAZ1RT"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "VPCBase"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "RouteTablePrivateAZ2": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-PrivateAZ2RT"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "VPCBase"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "RouteTablePublic": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-PublicRT"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "VPCBase"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "VPCBase": {
            "Properties": {
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "CIDRRange"
                            },
                            "/16"
                        ]
                    ]
                },
                "EnableDnsHostnames": "true",
                "EnableDnsSupport": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "-VPC"
                                ]
                            ]
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::VPC"
        }
    }
}
